added comments for tests and scripts into index.html file

--- a/jasmine-testing/index.html
+++ b/jasmine-testing/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Jasmine Testing</title>
-    
+
+    <!-- Load JAsmine Framework -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine.js"
 		integrity="sha512-dqL4nYnbiMiNNy/V2zRK55QXSRVyu26KCuGoL8Zf5lDfKRRf8pBFW8RXe8at36QlB8s8bnOjKP6b5YTalHO6wQ=="
 		crossorigin="anonymous"></script>
@@ -18,10 +17,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.6.0/jasmine.css"
 		integrity="sha512-XKXP02aeSNI5HsDB3+4MM0tSDXJTBFZpt99xL7PvMz3+A3aRy0F0Ne/CATK+Z72ckE/4Ev9OiosWQr5LtU284Q=="
 		crossorigin="anonymous" />
+
+    <!-- Load scripts -->
+    <script type ="text/javascript" src="scripts/calc.js"></script>
+
+    <!-- Load Tests -->
+    <script type="text/javascript" src="spec/calcSpec.js"></script>
+
 </head>
-
-<body>
-
-</body>
-
 </html>
